--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <script src="app.js" charset="utf-8"></script>
+    <script src="app.js" charset="utf-8" type="module"></script>
   </head>
   <body>
-
   </body>
 </html>
