--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <script src="app.js" charset="utf-8" type="module"></script>
+    <script src="app.js" charset="utf-8"></script>
   </head>
   <body>
   </body>
